--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required />
+        <label for="namesur">Sur Name:</label>
+        <input type="text" id="namesur" name="namesur" required />
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
